# vehicle-model

./: CMakeLists.txt  README.md  package.xml
config/: calibration.yaml  drive_info.yaml  phoenix_controller.yaml  robot_info.yaml
launch/: phoenix_controller.launch  phoenix_description.launch
meshes/uv/base/: UVRobot_V4.0_LWSTL_Simplified.STL
meshes/uv/lidar/: UV_Simplified_Lidar.dae
meshes/uv/mecanum/: TrackRollerMecanum_simp.STL
meshes/uv/wheels/: link_wheel_fr.STL  link_wheel_rl.STL
rviz/: example.rviz
urdf/: body_phoenix.xacro  bumper_with_sensor.xacro  camera_link.xacro  diff_drive.xacro  mecanum_steering.xacro  phoenix.urdf.xacro  skid_steer.xacro  wheel_phoenix.gazebo  wheel_phoenix.xacro
